# python-project-52

./: .gitignore  README.md  db.sqlite3  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: admin.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: base.html  login.html  navigation.html
task_manager/templates/apps/: apps_confirm_delete.html  apps_form.html
task_manager/templates/labels/: labels_list.html
task_manager/templates/statuses/: statuses_list.html
task_manager/templates/tasks/: tasks_detail.html  tasks_list.html
task_manager/templates/users/: registration.html  users_confirm_delete.html  users_form.html
task_manager/tests/: tests_labels.py  tests_statuses.py  tests_tasks.py  tests_users.py
task_manager/users/: admin.py  forms.py  models.py  views.py
task_manager/users/migrations/: 0001_initial.py
