[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dimon0476 <dmitry.fodorov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dj-database-url = "2.1.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
gunicorn = "^20.1.0"
Django = "^4.2.7"
django-bootstrap5 = "^3.0.1"
psycopg2-binary = "^2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
